--- a/frontend/src/app/quiz/quiz.component.html
+++ b/frontend/src/app/quiz/quiz.component.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="result" *ngIf="mode=='result'">
-                <h2>Quiz Result</h2>
+                <h2>Resultados del su ejercicio</h2>
                 <div *ngFor="let question of quiz.questions; let index = index">
                     <div class="result-question">
                         <h5>{{index + 1}}. {{question.name}}</h5>
@@ -61,7 +61,7 @@
                                 <input id="{{Option.id}}" type="checkbox" disabled="disabled" [(ngModel)]="Option.selected" /> {{Option.name}}
                             </div>
                         </div>
-                        <div class="p-1 m-2 alert {{ isCorrect(question) == 'correct'? 'alert-success': 'alert-danger'}}">Your answer is {{isCorrect(question)}}.</div>
+                        <div class="p-1 m-2 alert {{ isCorrect(question) == 'Correcta'? 'alert-success': 'alert-danger'}}">Su respuesta es: {{isCorrect(question)}}.</div>
                     </div>
                 </div>
                 <button type="button" class="btn sunny-morning-gradient bbtn btn-lg"><a [routerLink]="['/u1']">Regresar</a></button>
