--- a/frontend/src/app/quiz10/quiz10.component.html
+++ b/frontend/src/app/quiz10/quiz10.component.html
@@ -8,15 +8,7 @@
 <div class="text-left  container mt-2">
     <div class="shadow  bg-light mb-3 p-5 mb-5 bg-white rounded" width="20px">
         <div class="row">
-            <div class="col-6">
-                <h3>Quiz Application</h3>
-            </div>
-            <div class="col-6 text-right">
-                Select Quiz:
-                <select [(ngModel)]="quizName" (change)="loadQuiz(quizName)">
-      <option *ngFor="let quiz of quizes" [value]="quiz.id">{{quiz.name}}</option>
-    </select>
-            </div>
+
         </div>
         <div id="quiz">
             <h2 class="text-center font-weight-normal">{{quiz.name}}</h2>
@@ -24,8 +16,8 @@
 
             <div *ngIf="mode=='quiz' && quiz">
                 <div *ngFor="let question of filteredQuestions;">
-                    <div class="badge badge-info">Question {{pager.index + 1}} of {{pager.count}}.</div>
-                    <div *ngIf="config.duration" class="badge badge-info float-right">Time: {{ellapsedTime}} / {{duration}}</div>
+                    <div class="badge badge-info">Preguntas {{pager.index + 1}} de {{pager.count}}.</div>
+                    <div *ngIf="config.duration" class="badge badge-info float-right">Tiempo: {{ellapsedTime}} / {{duration}}</div>
                     <h3 class="font-weight-normal">{{pager.index + 1}}.
                         <span [innerHTML]="question.name"></span>
                     </h3>
@@ -41,10 +33,10 @@
                 </div>
                 <hr />
                 <div class="text-center">
-                    <button class="btn btn-default" *ngIf="config.allowBack" (click)="goTo(0);">First</button>
-                    <button class="btn btn-default" *ngIf="config.allowBack" (click)="goTo(pager.index - 1);">Prev</button>
-                    <button class="btn btn-primary" (click)="goTo(pager.index + 1);">Next</button>
-                    <button class="btn btn-default" *ngIf="config.allowBack" (click)="goTo(pager.count - 1);">Last</button>
+                    <button class="btn btn-default" *ngIf="config.allowBack" (click)="goTo(0);">Primera</button>
+                    <button class="btn btn-default" *ngIf="config.allowBack" (click)="goTo(pager.index - 1);">Anterior</button>
+                    <button class="btn btn-primary" (click)="goTo(pager.index + 1);">Siquiente</button>
+                    <button class="btn btn-default" *ngIf="config.allowBack" (click)="goTo(pager.count - 1);">Ultima</button>
                     <!--<pagination *ngIf="config.showPager" direction-links="false" total-items="totalItems" items-per-page="itemsPerPage" ng-model="currentPage" ng-change="pageChanged()"></pagination>-->
                 </div>
             </div>
@@ -55,7 +47,7 @@
                 </div>
             </div>
             <div class="result" *ngIf="mode=='result'">
-                <h2>Quiz Result</h2>
+                <h2>Resultados del su ejercicio</h2>
                 <div *ngFor="let question of quiz.questions; let index = index">
                     <div class="result-question">
                         <h5>{{index + 1}}. {{question.name}}</h5>
@@ -64,16 +56,16 @@
                                 <input id="{{Option.id}}" type="checkbox" disabled="disabled" [(ngModel)]="Option.selected" /> {{Option.name}}
                             </div>
                         </div>
-                        <div class="p-1 m-2 alert {{ isCorrect(question) == 'correct'? 'alert-success': 'alert-danger'}}">Your answer is {{isCorrect(question)}}.</div>
+                        <div class="p-1 m-2 alert {{ isCorrect(question) == 'Correcta'? 'alert-success': 'alert-danger'}}">Su respuesta es: {{isCorrect(question)}}.</div>
                     </div>
                 </div>
                 <button type="button" class="btn sunny-morning-gradient bbtn btn-lg"><a [routerLink]="['/u3']">Regresar</a></button>
             </div>
             <hr />
             <div *ngIf="mode!='result'">
-                <button class="btn btn-warning" (click)="mode = 'quiz'">Quiz</button>
-                <button class="btn btn-info" (click)="mode = 'review'">Review</button>
-                <button class="btn btn-primary" (click)="onSubmit();">Submit Quiz</button>
+                <button class="btn btn-warning" (click)="mode = 'quiz'">Ejercicios</button>
+                <button class="btn btn-info" (click)="mode = 'review'">Ver</button>
+                <button class="btn btn-primary" (click)="onSubmit();">Termine</button>
             </div>
 
         </div>
