--- a/frontend/src/app/quiz2/quiz2.component.html
+++ b/frontend/src/app/quiz2/quiz2.component.html
@@ -7,8 +7,6 @@
 <br>
 <div class="text-left  container mt-2">
     <div class="shadow  bg-light mb-3 p-5 mb-5 bg-white rounded" width="20px">
-        <div class="row">
-        </div>
         <div id="quiz">
             <h2 class="text-center font-weight-normal">{{quiz.name}}</h2>
             <hr />
@@ -44,7 +42,7 @@
                 </div>
             </div>
             <div class="result" *ngIf="mode=='result'">
-                <h2>Quiz Result</h2>
+                <h2>Resultados del su ejercicio</h2>
                 <div *ngFor="let question of quiz.questions; let index = index">
                     <div class="result-question">
                         <h5>{{index + 1}}. {{question.name}}</h5>
@@ -53,7 +51,7 @@
                                 <input id="{{Option.id}}" type="checkbox" disabled="disabled" [(ngModel)]="Option.selected" /> {{Option.name}}
                             </div>
                         </div>
-                        <div class="p-1 m-2 alert {{ isCorrect(question) == 'correct'? 'alert-success': 'alert-danger'}}">Your answer is {{isCorrect(question)}}.</div>
+                        <div class="p-1 m-2 alert {{ isCorrect(question) == 'Correcta'? 'alert-success': 'alert-danger'}}">Su respuesta es: {{isCorrect(question)}}.</div>
                     </div>
                 </div>
                 <button type="button" class="btn sunny-morning-gradient bbtn btn-lg"><a [routerLink]="['/u1']">Regresar</a></button>
